menu activity added with 4 text fields + submit button

--- a/res/layout/fragment_input_dummy.xml
+++ b/res/layout/fragment_input_dummy.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,8 +11,19 @@
 
     <Spinner
         android:id="@+id/dicespinner"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp" />
+        android:layout_alignLeft="@+id/dummy_fragment"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="44dp" />
 
-</LinearLayout>
+    <fragment
+        android:id="@+id/dummy_fragment"
+        android:name="com.example.fragmentexample.DummyFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dicespinner"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp" />
+
+</RelativeLayout>
