--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -48,12 +48,14 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
         android:text="Button" />
+    
+    
 
 </RelativeLayout>
