Added Send Message to the submit button which adds intent functionality to move from MenuActivity to InputActivity

--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -48,12 +48,13 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/add"
+        android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
+        android:onClick="sendMessage"
         android:text="Button" />
     
     
