--- a/res/layout/fragment_input.xml
+++ b/res/layout/fragment_input.xml
@@ -6,8 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context=".InputActivity$DummySectionFragment" >
+    tools:context="com.example.catanstat.InputActivity$InputFragment" >
 
     <Spinner
         android:id="@+id/dicespinner"
